updated non error ipynb

--- a/notebooks/pilot_kiva.ipynb
+++ b/notebooks/pilot_kiva.ipynb
@@ -34,8 +34,6 @@
     "display(HTML(\"<style>.container { width:100% !important; }</style>\"))\n",
     "\n",
     "import pandas as pd\n",
-    "pd.set_option('display.max_columns', None)\n",
-    "\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
     "from plotly.subplots import make_subplots\n",
@@ -383,15 +381,9 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- There are 4 warehouses:\n",
-    "  - PROD_WH: \n",
-    "  - DEV_WH: \n",
-    "  - DAILY_REFRESH_WH: \n",
-    "  - ML_WH: \n",
     "- PROD_WH incurs the highest cost for warehouses amongst all with a dollar value of 1221.29, followed by DEV_WH with a dollar value of 797.61\n",
     "- DAILY_REFRESH_WH’s cost is 347.14 and ML_WH’s cost is 140.47\n",
     "- CLOUD_SERVICES_ONLY does not incur any costs.\n",
@@ -414,7 +406,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##TODO: Investigate why turning off cloud services only makes daily refresh plot jump in some points\n",
+    "##TODO: Investigate why tunring off cloud services only makes daily refresh plot jump in some points\n",
     "fig = px.area(df_by_wh_ts, x=\"hourly_start_time\", y=\"credits\", color=\"warehouse_name\",color_discrete_sequence=color_scheme)\n",
     "fig.show()"
    ]
@@ -503,48 +495,6 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Peaks from Python usage at 10 am and 3 pm. Rest seems pretty noisy.\n",
-    "* JDBC driver takes most of the credits and is generally at 2 credits / hour all the time\n",
-    "* ODBC at 1/10th of that"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Warehouse configuration"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = qlib.warehouse_config()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* There are no resource monitors on any of the warehouses - one action we can take is help them set these up properly based on the data we are seeing\n",
-    "  "
    "cell_type": "markdown",
    "metadata": {},
    "source": [
