--- a/notebooks/pilot_kiva.ipynb
+++ b/notebooks/pilot_kiva.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,9 +25,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>.container { width:100% !important; }</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Setting up displays\n",
     "from IPython.display import display, HTML\n",
@@ -67,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,11 +518,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## WAREHOUSE ANALYSIS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = qlib.idle_warehouses(sdate, edate)\n",
+    "df = df.fillna('UnassigSned')\n",
+    "df.head()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "optiml",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -523,11 +555,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15 (main, Nov 24 2022, 08:28:41) \n[Clang 14.0.6 ]"
+   "version": "3.8.15"
   },
   "vscode": {
    "interpreter": {
-    "hash": "fcbd4ad66d969ea49516a1cf27383420b67e9e950ebdd1bbb64e01b736f968b6"
+    "hash": "3901be4ad1518de92fde126eb9513f48e1b035f5bf74ab1ccfbdd255a3dcbef1"
    }
   }
  },
