--- a/notebooks/pilot_kiva.ipynb
+++ b/notebooks/pilot_kiva.ipynb
@@ -502,9 +502,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "df=qlib.n_expensive_queries(sdate,edate)\n",
+    "df.head()"
+   ]
   }
  ],
  "metadata": {
