--- a/notebooks/pilot_kiva.ipynb
+++ b/notebooks/pilot_kiva.ipynb
@@ -32,13 +32,23 @@
     "# Setting up displays\n",
     "from IPython.display import display, HTML\n",
     "display(HTML(\"<style>.container { width:100% !important; }</style>\"))\n",
-    "\n",
+    "from dash import Dash,html,dcc,Input,Output\n",
+    "app = Dash(__name__)\n",
     "import pandas as pd\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
     "from plotly.subplots import make_subplots\n",
     "from tabulate import tabulate\n",
     "color_scheme=[\"red\",\"blue\",\"green\",\"orange\",\"purple\",\"brown\",\"pink\",\"gray\",\"olive\",\"cyan\",\"darkviolet\",\"goldenrod\",\"darkgreen\",\"chocolate\",\"lawngreen\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dash import Dash,html,dcc"
    ]
   },
   {
@@ -131,7 +141,7 @@
    "source": [
     "df = qlib.total_cost_breakdown_ts(sdate, edate)\n",
     "df = df.fillna('UnassigSned')\n",
-    "df.head()"
+    "df.to_csv('/home/manas/DS_data/breakdown.csv')\n"
    ]
   },
   {
@@ -508,11 +518,216 @@
     "df=qlib.n_expensive_queries(sdate,edate)\n",
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SOME CHARTS TO VISUALIZE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Most expensive queries\n",
+    "\n",
+    "trace1  = go.Scatter(\n",
+    "        mode='lines+markers',\n",
+    "        x = df['query_id'],\n",
+    "        y = df['relative_performance_cost'],\n",
+    "        name=\"Credits\",\n",
+    "        marker_color='crimson'\n",
+    "    )\n",
+    "\n",
+    "trace2 = go.Bar(\n",
+    "        x = df['query_id'],\n",
+    "        y = df['warehouse_size'],\n",
+    "        name=\"warehouse sie\",\n",
+    "        yaxis='y2',\n",
+    "        marker_color ='green',\n",
+    "        marker_line_width=1.5,\n",
+    "        marker_line_color='rgb(8,48,107)',\n",
+    "        opacity=0.5\n",
+    "    )\n",
+    "\n",
+    "data = [trace1, trace2]\n",
+    "\n",
+    "layout = go.Layout(\n",
+    "    title_text='Most expensive queries',\n",
+    "    yaxis=dict(\n",
+    "        range = [0, 100],\n",
+    "        side = 'right'\n",
+    "    ),\n",
+    "    yaxis2=dict(\n",
+    "        overlaying='y',\n",
+    "        anchor='y3',\n",
+    "    )\n",
+    ")\n",
+    "fig = go.Figure(data=data, layout=layout)\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=qlib.top_users(start_date=\"2022-01-01\", end_date=\"2022-02-02\")\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = px.bar(df, x=df['user_name'], y=df[\"estimated_credits\"], color=df[\"user_name\"], barmode=\"group\")\n",
+    "\n",
+    "app.layout = html.Div(children=[\n",
+    "    html.H1(children='Hello Dash'),\n",
+    "\n",
+    "    html.Div(children='''\n",
+    "        Dash: A web application framework for your data.\n",
+    "    '''),\n",
+    "\n",
+    "    dcc.Graph(\n",
+    "        id='example-graph',\n",
+    "        figure=fig\n",
+    "    )\n",
+    "])\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_expensiveq=qlib.n_expensive_queries(sdate,edate)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Warehouse credit usage over time\n",
+    "\n",
+    "\n",
+    "\n",
+    "app = Dash(__name__)\n",
+    "\n",
+    "\n",
+    "\n",
+    "fig = px.scatter(df_expensiveq, x=df_expensiveq[\"query_id\"], y=df_expensiveq[\"relative_performance_cost\"],\n",
+    "                 color=df_expensiveq[\"user_name\"], hover_name=df_expensiveq[\"warehouse_size\"],size_max=30)\n",
+    "fig.update_traces(marker_size=20)\n",
+    "\n",
+    "\n",
+    "app.layout = html.Div([\n",
+    "    dcc.Graph(\n",
+    "        id='life-exp-vs-gdp',\n",
+    "        figure=fig\n",
+    "    )\n",
+    "])\n",
+    "\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "app = Dash(__name__)\n",
+    "\n",
+    "\n",
+    "\n",
+    "app.layout = html.Div([\n",
+    "    html.Div([\n",
+    "\n",
+    "        html.Div([\n",
+    "            dcc.Dropdown(\n",
+    "                df['user_name'].unique(),\n",
+    "                'User_name',\n",
+    "                id='xaxis-column'\n",
+    "            ),\n",
+    "            dcc.RadioItems(\n",
+    "                ['Linear', 'Log'],\n",
+    "                'Linear',\n",
+    "                id='xaxis-type',\n",
+    "                inline=True\n",
+    "            )\n",
+    "        ], style={'width': '48%', 'display': 'inline-block'}),\n",
+    "\n",
+    "        html.Div([\n",
+    "            dcc.Dropdown(\n",
+    "                df['Indicator Name'].unique(),\n",
+    "                'Life expectancy at birth, total (years)',\n",
+    "                id='yaxis-column'\n",
+    "            ),\n",
+    "            dcc.RadioItems(\n",
+    "                ['Linear', 'Log'],\n",
+    "                'Linear',\n",
+    "                id='yaxis-type',\n",
+    "                inline=True\n",
+    "            )\n",
+    "        ], style={'width': '48%', 'float': 'right', 'display': 'inline-block'})\n",
+    "    ]),\n",
+    "\n",
+    "    dcc.Graph(id='indicator-graphic'),\n",
+    "\n",
+    "    dcc.Slider(\n",
+    "        df['Year'].min(),\n",
+    "        df['Year'].max(),\n",
+    "        step=None,\n",
+    "        id='year--slider',\n",
+    "        value=df['Year'].max(),\n",
+    "        marks={str(year): str(year) for year in df['Year'].unique()},\n",
+    "\n",
+    "    )\n",
+    "])\n",
+    "\n",
+    "\n",
+    "@app.callback(\n",
+    "    Output('indicator-graphic', 'figure'),\n",
+    "    Input('xaxis-column', 'value'),\n",
+    "    Input('yaxis-column', 'value'),\n",
+    "    Input('xaxis-type', 'value'),\n",
+    "    Input('yaxis-type', 'value'),\n",
+    "    Input('year--slider', 'value'))\n",
+    "def update_graph(xaxis_column_name, yaxis_column_name,\n",
+    "                 xaxis_type, yaxis_type,\n",
+    "                 year_value):\n",
+    "    dff = df[df['Year'] == year_value]\n",
+    "\n",
+    "    fig = px.scatter(x=dff[dff['Indicator Name'] == xaxis_column_name]['Value'],\n",
+    "                     y=dff[dff['Indicator Name'] == yaxis_column_name]['Value'],\n",
+    "                     hover_name=dff[dff['Indicator Name'] == yaxis_column_name]['Country Name'])\n",
+    "\n",
+    "    fig.update_layout(margin={'l': 40, 'b': 40, 't': 10, 'r': 0}, hovermode='closest')\n",
+    "\n",
+    "    fig.update_xaxes(title=xaxis_column_name,\n",
+    "                     type='linear' if xaxis_type == 'Linear' else 'log')\n",
+    "\n",
+    "    fig.update_yaxes(title=yaxis_column_name,\n",
+    "                     type='linear' if yaxis_type == 'Linear' else 'log')\n",
+    "\n",
+    "    return fig"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "optiml",
+   "display_name": "Python 3.8.2 ('sf')",
    "language": "python",
    "name": "python3"
   },
@@ -526,11 +741,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15 (main, Nov 24 2022, 08:28:41) \n[Clang 14.0.6 ]"
+   "version": "3.8.2"
   },
   "vscode": {
    "interpreter": {
-    "hash": "fcbd4ad66d969ea49516a1cf27383420b67e9e950ebdd1bbb64e01b736f968b6"
+    "hash": "ba286fab723f3beadf2310fa20d811dff5d5606e9e08a95b52f51185bcb3e19b"
    }
   }
  },
