updated query analysis section

--- a/notebooks/pilot_kiva.ipynb
+++ b/notebooks/pilot_kiva.ipynb
@@ -512,20 +512,133 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Most expensive queries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=qlib.n_expensive_queries(sdate,edate,20)\n",
+    "df=qlib.n_expensive_queries(sdate,edate,5)\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##TODO: Put labels on the axis\n",
+    "## Most expensive queries\n",
+    "\n",
+    "trace1  = go.Scatter(\n",
+    "        mode='lines+markers',\n",
+    "        x = df['query_id'],\n",
+    "        y = df['credits'],\n",
+    "        name=\"Credits\",\n",
+    "        marker_color='crimson'\n",
+    "    )\n",
+    "\n",
+    "# trace2 = go.Bar(\n",
+    "#         x = df['query_id'],\n",
+    "#         y = df['warehouse_size'],\n",
+    "#         name=\"warehouse size\",\n",
+    "#         yaxis='y2',\n",
+    "#         marker_color ='green',\n",
+    "#         marker_line_width=1.5,\n",
+    "#         marker_line_color='rgb(8,48,107)',\n",
+    "#         opacity=0.5\n",
+    "#     )\n",
+    "\n",
+    "# data = [trace1, trace2]\n",
+    "data = [trace1]\n",
+    "\n",
+    "layout = go.Layout(\n",
+    "    title_text='Most expensive queries',\n",
+    "    yaxis=dict(\n",
+    "        # range = [0, 100],\n",
+    "        side = 'left'\n",
+    "    ),\n",
+    "    # yaxis2=dict(\n",
+    "    #     overlaying='y',\n",
+    "    #     anchor='y3',\n",
+    "    # )\n",
+    ")\n",
+    "fig = go.Figure(data=data, layout=layout)\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Query text"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Query 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df.iloc[0][\"query_text\"])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Query 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df.iloc[1][\"query_text\"])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Query 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df.iloc[2][\"query_text\"])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## SOME CHARTS TO VISUALIZE"
+    "### Queries that spill to storage"
    ]
   },
   {
@@ -534,34 +647,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df=qlib.n_queries_spill_to_storage(sdate,edate,5)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##TODO: Put labels on the axis\n",
     "## Most expensive queries\n",
     "\n",
     "trace1  = go.Scatter(\n",
     "        mode='lines+markers',\n",
     "        x = df['query_id'],\n",
-    "        y = df['relative_performance_cost'],\n",
-    "        name=\"Credits\",\n",
+    "        y = df['bytes_spilled_to_remote_storage'],\n",
+    "        name=\"Bytes Spilled Remote\",\n",
     "        marker_color='crimson'\n",
     "    )\n",
     "\n",
-    "trace2 = go.Bar(\n",
+    "trace2  = go.Scatter(\n",
+    "        mode='lines+markers',\n",
     "        x = df['query_id'],\n",
-    "        y = df['warehouse_size'],\n",
-    "        name=\"warehouse sie\",\n",
-    "        yaxis='y2',\n",
-    "        marker_color ='green',\n",
-    "        marker_line_width=1.5,\n",
-    "        marker_line_color='rgb(8,48,107)',\n",
-    "        opacity=0.5\n",
+    "        y = df['bytes_spilled_to_local_storage'],\n",
+    "        name=\"Bytes Spilled Local\",\n",
+    "        marker_color='purple'\n",
     "    )\n",
+    "\n",
     "\n",
     "data = [trace1, trace2]\n",
     "\n",
+    "\n",
     "layout = go.Layout(\n",
-    "    title_text='Most expensive queries',\n",
+    "    title_text='Queries that spilled the most to storage',\n",
     "    yaxis=dict(\n",
-    "        range = [0, 100],\n",
-    "        side = 'right'\n",
+    "        # range = [0, 100],\n",
+    "        side = 'left'\n",
     "    ),\n",
     "    yaxis2=dict(\n",
     "        overlaying='y',\n",
@@ -570,6 +693,366 @@
     ")\n",
     "fig = go.Figure(data=data, layout=layout)\n",
     "fig.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Query text"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Query 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df.iloc[0][\"query_text\"])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Query 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df.iloc[1][\"query_text\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Query 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df.iloc[2][\"query_text\"])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Queries that scanned the most data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=qlib.n_queries_scanned_most_data(sdate,edate,5)\n",
+    "df.head() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##TODO: Put labels on the axis\n",
+    "## Queries that scanned most data\n",
+    "\n",
+    "trace1  = go.Scatter(\n",
+    "        mode='lines+markers',\n",
+    "        x = df['query_id'],\n",
+    "        y = df['partitions_scanned'],\n",
+    "        name=\"Partitions Scanned\",\n",
+    "        marker_color='crimson'\n",
+    "    )\n",
+    "\n",
+    "data = [trace1]\n",
+    "\n",
+    "layout = go.Layout(\n",
+    "    title_text='Queries that scanned the most partitions',\n",
+    "    yaxis=dict(\n",
+    "        side = 'left'\n",
+    "    ),\n",
+    ")\n",
+    "fig = go.Figure(data=data, layout=layout)\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Query text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Query 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df.iloc[0][\"query_text\"])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Query 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df.iloc[1][\"query_text\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Query 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df.iloc[2][\"query_text\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Most cached queries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=qlib.n_most_cached_queries(sdate,edate,5)\n",
+    "df.head() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##TODO: Put labels on the axis\n",
+    "## Queries that scanned the most from cache\n",
+    "\n",
+    "trace1  = go.Scatter(\n",
+    "        mode='lines+markers',\n",
+    "        x = df['query_id'],\n",
+    "        y = df['percent_scanned_from_cache'],\n",
+    "        name=\"Percent Scanned From Cache\",\n",
+    "        marker_color='crimson'\n",
+    "    )\n",
+    "\n",
+    "data = [trace1]\n",
+    "\n",
+    "layout = go.Layout(\n",
+    "    title_text='Queries that scanned the most percent from cache',\n",
+    "    yaxis=dict(\n",
+    "        side = 'left'\n",
+    "    ),\n",
+    ")\n",
+    "fig = go.Figure(data=data, layout=layout)\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Query 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df.iloc[2][\"query_text\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Query 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df.iloc[1][\"query_text\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Query 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df.iloc[2][\"query_text\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Most executed queries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=qlib.n_most_executed_queries(sdate,edate,5)\n",
+    "df.head() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##TODO: Put labels on the axis, fix ticks on the axis to be integers\n",
+    "## Queries that scanned the most from cache\n",
+    "\n",
+    "trace1  = go.Scatter(\n",
+    "        mode='lines+markers',\n",
+    "        x = df.index,\n",
+    "        y = df['number_of_times_executed'],\n",
+    "        name=\"Number of times executed\",\n",
+    "        marker_color='crimson'\n",
+    "    )\n",
+    "\n",
+    "data = [trace1]\n",
+    "\n",
+    "layout = go.Layout(\n",
+    "    title_text='Queries that were executed the most number of times',\n",
+    "    yaxis=dict(\n",
+    "        side = 'left'\n",
+    "    ),\n",
+    ")\n",
+    "fig = go.Figure(data=data, layout=layout)\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Query 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "print(df.iloc[0][\"query_text\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Query 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df.iloc[1][\"query_text\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Query 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df.iloc[3][\"query_text\"])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analysis\n",
+    "* 4-20 most expensive queries are the same query"
    ]
   },
   {
@@ -736,7 +1219,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.2 ('sf')",
+   "display_name": "optiml",
    "language": "python",
    "name": "python3"
   },
@@ -750,11 +1233,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.15"
   },
   "vscode": {
    "interpreter": {
-    "hash": "ba286fab723f3beadf2310fa20d811dff5d5606e9e08a95b52f51185bcb3e19b"
+    "hash": "fcbd4ad66d969ea49516a1cf27383420b67e9e950ebdd1bbb64e01b736f968b6"
    }
   }
  },
