--- a/notebooks/pilot_kiva.ipynb
+++ b/notebooks/pilot_kiva.ipynb
@@ -36,6 +36,7 @@
     "app = Dash(__name__)\n",
     "import pandas as pd\n",
     "pd.set_option('display.max_rows', 500)\n",
+    "pd.set_option('display.max_columns', 500)\n",
     "\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
@@ -117,10 +118,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### SETUP FOR ANALYSIS\n",
+    "## Analysis setup\n",
     "- Date range: 10/1/22 to 10/12/22\n",
     "\n",
     "- Type of account with Snowflake - Standard Edition powered by GCP\n",
@@ -505,10 +507,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## QUERY ANALYSIS"
+    "# Query Analysis"
    ]
   },
   {
@@ -516,7 +519,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Most expensive queries"
+    "## Most expensive queries"
    ]
   },
   {
@@ -635,10 +638,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Queries that spill to storage"
+    "## Queries that spill to storage"
    ]
   },
   {
@@ -758,7 +762,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Queries that scanned the most data"
+    "## Queries that scanned the most data"
    ]
   },
   {
@@ -858,10 +862,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Most cached queries"
+    "## Most cached queries"
    ]
   },
   {
@@ -952,10 +957,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Most executed queries"
+    "## Most executed 'select' queries -- update this for select statements"
    ]
   },
   {
@@ -964,7 +970,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=qlib.n_most_executed_queries(sdate,edate,5)\n",
+    "df=qlib.n_most_executed_queries(sdate,edate,10)\n",
     "df.head() "
    ]
   },
@@ -1045,6 +1051,53 @@
    "source": [
     "print(df.iloc[3][\"query_text\"])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# User Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## This would be my starting point for users that are a security risk\n",
+    "idle_user_start_date = '2022-04-01'\n",
+    "idle_user_end_date = '2022-10-31'\n",
+    "df = qlib.idle_users(idle_user_start_date, idle_user_end_date)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Users never logged in but not deleted\n",
+    "idle_user_start_date = '2022-04-01'\n",
+    "idle_user_end_date = '2022-10-31'\n",
+    "df = qlib.users_never_logged_in(idle_user_start_date, idle_user_end_date)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "attachments": {},
