Created the queries for idle_warehouses and the warehouse required larger warehouses
Created the queries for idle_warehouses and the warehouse required larger warehouses and warehouses required multi cluster warehouse

--- a/notebooks/pilot_kiva.ipynb
+++ b/notebooks/pilot_kiva.ipynb
@@ -1263,11 +1263,61 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## WAREHOUSE ANALYSIS"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = qlib.idle_warehouses(sdate, edate, -80)\n",
+    "df = df.fillna('UnassigSned')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### WAREHOUSE NEED LARGER WAREHOUSES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = qlib.wh_scaled_up_out()\n",
+    "df = df.fillna('UnassigSned')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### WAREHOUSES NEED MCW"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = qlib.wh_required_mcw()\n",
+    "df = df.fillna('UnassigSned')\n",
+    "df.head()"
+   ]
   }
  ],
  "metadata": {
