--- a/notebooks/kiva/pilot_kiva.ipynb
+++ b/notebooks/kiva/pilot_kiva.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# Adding system path\n",
     "import sys, pathlib\n",
-    "sys.path.append(str(pathlib.Path.cwd().parent))\n",
+    "sys.path.append(str(pathlib.Path.cwd().parent.parent))\n",
     "# sys.path"
    ]
   },
@@ -1286,7 +1286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15 (main, Nov 24 2022, 08:28:41) \n[Clang 14.0.6 ]"
+   "version": "3.9.15"
   },
   "vscode": {
    "interpreter": {
