--- a/notebooks/kiva/query_analysis.ipynb
+++ b/notebooks/kiva/query_analysis.ipynb
@@ -142,7 +142,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##TODO: Put labels on the axis\n",
     "## Most expensive queries\n",
     "\n",
     "trace1  = go.Scatter(\n",
@@ -264,7 +263,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##TODO: Put labels on the axis\n",
     "## Most expensive queries\n",
     "\n",
     "trace1  = go.Scatter(\n",
@@ -498,7 +496,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##TODO: Put labels on the axis\n",
     "## Queries that scanned the most from cache\n",
     "\n",
     "trace1  = go.Scatter(\n",
@@ -600,7 +597,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##TODO: Put labels on the axis, fix ticks on the axis to be integers\n",
     "## Queries that scanned the most from cache\n",
     "\n",
     "trace1  = go.Scatter(\n",
@@ -618,7 +614,7 @@
     "    yaxis=dict(\n",
     "        # range = [0, 100],\n",
     "        side = 'left',\n",
-    "        title=\"Number of Times Rxecuted\"\n",
+    "        title=\"Number of times executed\"\n",
     "        \n",
     "    ),\n",
     "    xaxis=dict(\n",
@@ -682,7 +678,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sf",
+   "display_name": "optiml",
    "language": "python",
    "name": "python3"
   },
@@ -696,11 +692,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.15"
   },
   "vscode": {
    "interpreter": {
-    "hash": "ba286fab723f3beadf2310fa20d811dff5d5606e9e08a95b52f51185bcb3e19b"
+    "hash": "fcbd4ad66d969ea49516a1cf27383420b67e9e950ebdd1bbb64e01b736f968b6"
    }
   }
  },
