Added warehouse analysis metrics
Added warehouse analysis metrics

--- a/notebooks/kiva/wh_analysis.ipynb
+++ b/notebooks/kiva/wh_analysis.ipynb
@@ -5,22 +5,155 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Adding system path\n",
+    "import sys, pathlib\n",
+    "sys.path.append(str(pathlib.Path.cwd().parent.parent))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set to show warnings only once\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setting up displays\n",
+    "from IPython.display import display, HTML\n",
+    "import pandas as pd\n",
+    "pd.set_option('display.max_rows', 500)\n",
+    "pd.set_option('display.max_columns', 500)\n",
+    "\n",
+    "import plotly.express as px\n",
+    "import plotly.graph_objects as go\n",
+    "from plotly.subplots import make_subplots\n",
+    "from tabulate import tabulate\n",
+    "color_scheme=[\"red\",\"blue\",\"green\",\"orange\",\"purple\",\"brown\",\"pink\",\"gray\",\"olive\",\"cyan\",\"darkviolet\",\"goldenrod\",\"darkgreen\",\"chocolate\",\"lawngreen\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setting up autoreload for libs\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "%aimport optiml.queries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize connection to Snowflake and set analysis date\n",
+    "from optiml.connection import SnowflakeConnConfig\n",
+    "connection = SnowflakeConnConfig(accountname='jg84276.us-central1.gcp',warehousename=\"XSMALL_WH\").create_connection()\n",
+    "# Initialize local environment\n",
+    "import os\n",
+    "cache_dir = os.path.expanduser('~/data/kiva')\n",
+    "# Initialize query library\n",
+    "from optiml.queries import SNFLKQuery\n",
+    "qlib = SNFLKQuery(connection, 'KIV', cache_dir)\n",
+    "sdate = '2022-10-01'\n",
+    "edate = '2022-10-31'\n",
+    "print(f\"The analysis is carried our for date range {sdate} to {edate}\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### WAREHOUSE ANALYSIS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = qlib.idle_warehouses(sdate, edate)\n",
+    "df = df.fillna('UnassigSned')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = qlib.wh_scaled_up_out()\n",
+    "df = df.fillna('UnassigSned')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = qlib.wh_required_mcw()\n",
+    "df = df.fillna('UnassigSned')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = qlib.wh_under_utilization()\n",
+    "df = df.fillna('UnassigSend')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "optiml",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.9.15 (main, Nov 24 2022, 08:28:41) \n[Clang 14.0.6 ]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.15"
   },
   "vscode": {
    "interpreter": {
-    "hash": "fcbd4ad66d969ea49516a1cf27383420b67e9e950ebdd1bbb64e01b736f968b6"
+    "hash": "3901be4ad1518de92fde126eb9513f48e1b035f5bf74ab1ccfbdd255a3dcbef1"
    }
   }
  },
