Added user analysis graphs

--- a/notebooks/kiva/user_analysis.ipynb
+++ b/notebooks/kiva/user_analysis.ipynb
@@ -127,7 +127,19 @@
     "idle_user_start_date = '2022-04-01'\n",
     "idle_user_end_date = '2022-10-31'\n",
     "df = qlib.idle_users(idle_user_start_date, idle_user_end_date)\n",
-    "df"
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import plotly.express as px\n",
+    "# data_canada = px.data.gapminder().query(\"country == 'Canada'\")\n",
+    "fig = px.bar(df, x=df[\"name\"], y=df[\"last_success_login\"])\n",
+    "fig.show()"
    ]
   },
   {
@@ -140,7 +152,7 @@
     "idle_user_start_date = '2022-04-01'\n",
     "idle_user_end_date = '2022-10-31'\n",
     "df = qlib.users_never_logged_in(idle_user_start_date, idle_user_end_date)\n",
-    "df"
+    "# df.head()"
    ]
   },
   {
@@ -148,22 +160,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fig = px.bar(df, x=df[\"name\"], y=df[\"created_on\"])\n",
+    "fig.update_traces(width=0.2)\n",
+    "fig.show()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "## Analysis\n",
-    "* 4-20 most expensive queries are the same query"
+    "df=qlib.users_full_table_scans(start_date='2018-04-01', end_date='2022-10-31')\n",
+    "df.head()"
    ]
   },
   {
@@ -182,20 +192,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = px.bar(df, x=df['user_name'], y=df[\"estimated_credits\"], color=df[\"user_name\"], barmode=\"group\")\n",
     "\n",
-    "app.layout = html.Div(children=[\n",
-    "    html.H1(children='Hello Dash'),\n",
-    "\n",
-    "    html.Div(children='''\n",
-    "        Dash: A web application framework for your data.\n",
-    "    '''),\n",
-    "\n",
-    "    dcc.Graph(\n",
-    "        id='example-graph',\n",
-    "        figure=fig\n",
-    "    )\n",
-    "])\n",
+    "fig = px.bar(df, x=\"estimated_credits\", y=\"user_name\", orientation='h')\n",
     "fig.show()"
    ]
   },
@@ -205,7 +203,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_expensiveq=qlib.n_expensive_queries(sdate,edate)\n"
+    "df=qlib.heavy_users(start_date=\"2019-01-01\", end_date=\"2022-02-02\")\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=qlib.idle_roles(start_date=\"2021-01-01\", end_date=\"2022-02-02\")\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = px.bar(df, x=\"created_on\", y=\"name\", orientation='h')\n",
+    "fig.show()"
    ]
   },
   {
@@ -330,7 +349,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "optiml",
+   "display_name": "sf",
    "language": "python",
    "name": "python3"
   },
@@ -344,11 +363,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15 (main, Nov 24 2022, 08:28:41) \n[Clang 14.0.6 ]"
+   "version": "3.8.2"
   },
   "vscode": {
    "interpreter": {
-    "hash": "fcbd4ad66d969ea49516a1cf27383420b67e9e950ebdd1bbb64e01b736f968b6"
+    "hash": "ba286fab723f3beadf2310fa20d811dff5d5606e9e08a95b52f51185bcb3e19b"
    }
   }
  },
