removing deprecated notebook

--- a/notebooks/kiva/query_analysis.ipynb
+++ b/notebooks/kiva/query_analysis.ipynb
@@ -674,6 +674,25 @@
    "source": [
     "print(df.iloc[3][\"query_text\"])"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Notes\n",
+    "\n",
+    "* For most expensive queries i.e. consuming most credits steps are:\n",
+    "  * Look at the amount of data the queries are operating on to see if it passes the sniff test\n",
+    "  * Idenitfy causes of credit consumption e.g. using INSERT instead of COPY_TO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
