--- a/notebooks/kiva/user_analysis.ipynb
+++ b/notebooks/kiva/user_analysis.ipynb
@@ -182,7 +182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=qlib.top_users(start_date=\"2022-01-01\", end_date=\"2022-02-02\")\n",
+    "df=qlib.top_users(start_date=\"2022-10-01\", end_date=\"2022-10-31\")\n",
     "df.head()"
    ]
   },
@@ -349,7 +349,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sf",
+   "display_name": "optiml",
    "language": "python",
    "name": "python3"
   },
@@ -363,11 +363,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.15"
   },
   "vscode": {
    "interpreter": {
-    "hash": "ba286fab723f3beadf2310fa20d811dff5d5606e9e08a95b52f51185bcb3e19b"
+    "hash": "fcbd4ad66d969ea49516a1cf27383420b67e9e950ebdd1bbb64e01b736f968b6"
    }
   }
  },
